# codegen-lang

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
benches/: bench.rs
dev/: ROADMAP.md
docs/: API.md
docs/release/: v0.2.0.md  v1.0.0.md
examples/: disassemble.rs  inspect.rs
src/: backend.rs  error.rs  lib.rs  lower.rs  program.rs
tests/: invalid.rs  properties.rs  serde.rs  workflow.rs
tests/support/: mod.rs
