# =============================================================================
#  R E P S   ·   codegen-lang
# =============================================================================
[package]
name    = "codegen-lang"
version = "0.2.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Backend abstraction targeting LLVM, Cranelift, or bytecode."

# Keywords (5 max)
keywords = ["compiler", "language", "codegen", "backend", "ir"]

# Categories
categories = ["development-tools", "compilers"]

# Links
homepage      = "https://github.com/jamesgober/codegen-lang"
repository    = "https://github.com/jamesgober/codegen-lang"
documentation = "https://docs.rs/codegen-lang"

# Authors
authors = ["James Gober <me@jamesgober.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "codegen_lang"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
default = ["std"]
# The standard library. Without it the crate is `#![no_std]` and needs only `alloc`.
std = ["ir-lang/std"]
# Serialization support for the emitted program and its instructions.
serde = ["dep:serde", "ir-lang/serde"]


# DEPENDENCIES
# #################################
[dependencies]
# The intermediate representation this backend lowers. `Function` is the input to
# every `Backend`; its frozen 1.0 surface is what codegen reads and traverses.
ir-lang = { version = "1", default-features = false }
serde = { version = "1", optional = true, default-features = false, features = ["derive", "alloc"] }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"


# BENCHMARKS
# #################################
[[bench]]
name    = "bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
